<resources>
    <string name="app_name">RestClient</string>
    <string name="website">https://github.com/Sayi/RestClient</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="general">General</string>
    <string name="response_headers">Response Headers</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="query_parameters">Query Parameters</string>
    <string name="headers">Headers</string>
    <string name="add">Add</string>
    <string name="type_an_uri">type an URI</string>
    <string name="body_json_string">body json string</string>
    <string name="body">Body</string>
    <string name="title_about">About</string>
    <string name="title_auth">Basic Authorization</string>
</resources>
